@@ -4,26 +4,25 @@ import cn.hutool.core.collection.CollectionUtil;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.example.likeshoppush.common.enums.OrderStatus;
+import org.example.likeshoppush.common.enums.PayStatus;
 import org.example.likeshoppush.domain.entity.LsOrder;
 import org.example.likeshoppush.domain.entity.LsOrderPush;
+import org.example.likeshoppush.domain.entity.LsRechargeOrder;
 import org.example.likeshoppush.service.*;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
-public class OrderPushTask {
+public class WeixinLogisticsPushTask {
     @Resource
     private ILsOrderService lsOrderService;
+    @Resource
+    private ILsRechargeService lsRechargeService;
     @Resource
     private ILsOrderPushService lsOrderPushService;
     @Resource
@@ -32,7 +31,7 @@ public class OrderPushTask {
     private final String key = "last_execution_time";
 
     @Scheduled(fixedRate = 60000)
-    public void pushOrders() {
+    public void execute() {
         long currentTimeSeconds = System.currentTimeMillis() / 1000;
 
         Object redisValue = redisTemplate.opsForValue().get(key);
@@ -51,29 +50,54 @@ public class OrderPushTask {
                 .select(LsOrder::getId)
                 .in(LsOrder::getOrderStatus, Arrays.asList(OrderStatus.ON_SENDING, OrderStatus.HAS_FINISHED))
                 .ge(LsOrder::getUpdateTime, (int) lastExecutionTimeSeconds)
+                .ne(LsOrder::getPayWay, 2)
                 .eq(LsOrder::getDel, false)
                 .list()
                 .stream()
                 .map(LsOrder::getId)
                 .toList();
-        if (CollectionUtil.isEmpty(orderIdList)) {
-            return;
+        if (CollectionUtil.isNotEmpty(orderIdList)) {
+            List<Integer> pushedOrderIds = lsOrderPushService.lambdaQuery()
+                    .eq(LsOrderPush::getIsSuccess, true)
+                    .eq(LsOrderPush::getType, 0)
+                    .in(LsOrderPush::getOrderId, orderIdList)
+                    .select(LsOrderPush::getOrderId)
+                    .list()
+                    .stream()
+                    .map(LsOrderPush::getOrderId)
+                    .toList();
+            List<Integer> idsToPush = orderIdList.stream()
+                    .filter(orderId -> !pushedOrderIds.contains(orderId))
+                    .toList();
+            if (CollectionUtil.isNotEmpty(idsToPush)) {
+                lsOrderPushService.pushOrderList(idsToPush);
+            }
         }
-        List<Integer> pushedOrderIds = lsOrderPushService.lambdaQuery()
+
+        List<Integer> rechargeIdList = lsRechargeService.lambdaQuery()
+                .select(LsRechargeOrder::getId)
+                .ge(LsRechargeOrder::getPayTime, (int) lastExecutionTimeSeconds)
+                .eq(LsRechargeOrder::getPayStatus, PayStatus.HAS_PAYED)
+                .list()
+                .stream()
+                .map(LsRechargeOrder::getId)
+                .toList();
+
+        List<Integer> pushedRechargeOrderIds = lsOrderPushService.lambdaQuery()
                 .eq(LsOrderPush::getIsSuccess, true)
+                .eq(LsOrderPush::getType, 1)
                 .in(LsOrderPush::getOrderId, orderIdList)
                 .select(LsOrderPush::getOrderId)
                 .list()
                 .stream()
                 .map(LsOrderPush::getOrderId)
                 .toList();
-        List<Integer> idsToPush = orderIdList.stream()
-                .filter(orderId -> !pushedOrderIds.contains(orderId))
-                .collect(Collectors.toList());
-        if (CollectionUtil.isEmpty(idsToPush)) {
-            return;
+        List<Integer> rechargeIdsToPush = rechargeIdList.stream()
+                .filter(orderId -> !pushedRechargeOrderIds.contains(orderId))
+                .toList();
+        if (CollectionUtil.isNotEmpty(rechargeIdsToPush)) {
+            lsOrderPushService.pushRechargeOrderList(rechargeIdsToPush);
         }
-        lsOrderPushService.pushOrderList(idsToPush);
         log.info("定时任务【订单推送】执行完毕");
     }
 }
